--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "twilio": "^3.80.1",
